# Inventory-Distribution-Manager

./: .gitignore  .pre-commit-config.yaml  README.md  agents.md  app.py  cleanup_blanks.py  core.py  cycle_dashboard.py  debug.json  debug_cycle.py  pyproject.toml  requirements.txt  run_inventory_app.bat  yyy_extracted.txt
.ai/: update_agents_md.py
.github/workflows/: sync-to-hub.yml  update-agents-md.yml  update_data_snapshot.yml
.streamlit/: config.toml
BackEnd/ai_engine/: ai_query.py
BackEnd/cache/: customer_first_order.parquet
BackEnd/cache/deenb/: orders_refresh_status.json  stock_refresh_status.json  woo_orders.parquet  woo_orders_meta.json  woo_stock.parquet  woo_stock_meta.json
BackEnd/cache/sajid/: orders_refresh_status.json  stock_refresh_status.json  woo_orders.parquet  woo_orders_meta.json  woo_stock.parquet  woo_stock_meta.json
BackEnd/commerce_ops/: distribution_tab.py  fuzzy_parser_tab.py  pathao_tab.py  ui_components.py  wp_tab.py
BackEnd/core/: categories.py  geo.py  logging_config.py
BackEnd/data/models/: customer_risk_latest.json  demand_forecast_latest.json  sales_anomalies_latest.json
BackEnd/services/: affinity_engine.py  customer_insights.py  customer_manager.py  hybrid_data_loader.py  inventory_intel.py  ml_engine.py  ml_insights.py  nlp_engine.py  powerbi_export.py  rag_engine.py  returns_tracker.py  strategic_intelligence.py  ts_forecast.py  woocommerce_service.py
BackEnd/services/woocommerce_client/: __init__.py  api_client.py  base_api_client.py  fetch_customers.py  fetch_orders.py  fetch_products.py
BackEnd/utils/: io.py  sales_schema.py  woocommerce_helpers.py
FrontEnd/components/: __init__.py  animation.py  cards.py  category_matrix.py  charts.py  data_display.py  data_pilot_terminal.py  insights.py  layout.py  metrics.py  mui_components.py  ui.py  ui_components.py
FrontEnd/components/customer_insight/: __init__.py  customer_filters.py  customer_report.py  customer_selector.py  order_history_table.py
FrontEnd/data/error_prompts/: error_prompt_2026-04-05_12-18-43.md  (+257 more)
FrontEnd/pages/: customer_insights.py  cycle_analytics.py  dashboard.py  shopai.py  system_health.py  woocommerce.py
FrontEnd/utils/: config.py  error_handler.py
app_modules/: sales_dashboard.py
scratch/: test_pandas.py
scripts/: build_customer_mapping.py  generate_snapshot.py
src/core/: categories.py  errors.py  paths.py  persistence.py  sync.py
src/data/: tmpebu7ggmn  tmpg_vx9roq  tmplkr7zdhh  tmpq0f1kr50
src/modules/: ai.py  catwise.py  ecommerce.py  inventory.py  logistics.py  parser.py  sales.py  tools.py  whatsapp.py  woo_report.py
src/services/: master_sales.py
src/ui/: animations.py  bike_animation.py  components.py
src/utils/: data.py
tests/: test_cycle_analytics.py  test_error_handler.py  test_hybrid_data_loader.py  test_master_sales.py  test_ml_insights.py  test_sales_schema.py  test_shopai_crm.py  test_woocommerce_preview.py  test_woocommerce_secrets.py
(+21 files in other folders)
