[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-pivot"
version = "2.5.0"
description = "Streamlit operations dashboard for DEEN Commerce"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DEEN Commerce", email = "ops@deencommerce.com"}
]
keywords = ["streamlit", "dashboard", "ecommerce", "automation", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Business/Commerce",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core app and analytics
    "streamlit>=1.54.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "openpyxl>=3.1.5",
    "XlsxWriter>=3.2.9",
    "pyarrow>=20.0.0",
    "Pillow>=11.2.1",
    "beautifulsoup4>=4.14.3",
    # Parsing and matching
    "rapidfuzz>=3.14.3",
    "dateparser>=1.4.0",
    # Google Sheets integration
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.1",
    "google-auth-httplib2>=0.3.0",
    "openai>=2.24.0",
    # Performance optimization (optional)
    "polars>=0.20.0",
    # Utilities
    "pyshorteners>=1.0.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://deencommerce.com"
Repository = "https://github.com/deencommerce/automation-pivot"

[tool.setuptools]
packages = ["BackEnd", "FrontEnd"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
